Add affiliate tracking to all givebutter links and QR codes.

--- a/_print/2026-01-salon-slides.html
+++ b/_print/2026-01-salon-slides.html
@@ -703,8 +703,8 @@ format: "1920x1080 Slides"
     <div class="slide__content">
       <p class="cta-message">Together, let's build a community where ideas inspire action.</p>
       <div class="cta-section">
-        <!-- QR code for: https://givebutter.com/tedxbreckenridge -->
-        <!-- Generate at: https://api.qrserver.com/v1/create-qr-code/?size=510x510&data=https://givebutter.com/tedxbreckenridge -->
+        <!-- QR code for: https://givebutter.com/tedxbreckenridge?utm_source=print&utm_campaign=print-slides-jan-salon -->
+        <!-- Generate at: https://api.qrserver.com/v1/create-qr-code/?size=510x510&data=https://givebutter.com/tedxbreckenridge?utm_source=print%26utm_campaign=print-slides-jan-salon -->
         <div class="qr-code">
           <img src="/assets/images/qr-codes/givebutter-tedxbreckenridge.png" alt="Donate to TEDxBreckenridge">
         </div>
