--- a/_print/2026-01-salon-flyer-alt.html
+++ b/_print/2026-01-salon-flyer-alt.html
@@ -153,8 +153,8 @@ format: "8.5 x 11 Flyer"
         <h1 class="title">Elevated Cuisine: The Science and Art of Cooking at Altitude</h1>
       </div>
       <div class="footer">
-<!-- QR code for: https://tedxbreckenridge.ticketsauce.com/e/cooking-at-altitude?utm_source=affiliate&utm_name=Flyer-(veggies)-QR-Code&utm_campaign=Flyer-(veggies)-QR-Code&utm_id=695880ed79bc46c4890918500a1e6004 -->
-        <!-- Generate at: https://api.qrserver.com/v1/create-qr-code/?size=510x510&data=https://tedxbreckenridge.ticketsauce.com/e/cooking-at-altitude?utm_source=affiliate%26utm_name=Flyer-(veggies)-QR-Code%26utm_campaign=Flyer-(veggies)-QR-Code%26utm_id=695880ed79bc46c4890918500a1e6004 -->
+<!-- QR code for: https://tedxbreckenridge.ticketsauce.com/e/cooking-at-altitude?utm_source=affiliate&utm_name=flyer-veggies-qr-code&utm_campaign=flyer-veggies-qr-code&utm_id=6958af807798408d8dcd31550a1e63f9 -->
+        <!-- Generate at: https://api.qrserver.com/v1/create-qr-code/?size=510x510&data=https://tedxbreckenridge.ticketsauce.com/e/cooking-at-altitude?utm_source=affiliate%26utm_name=flyer-veggies-qr-code%26utm_campaign=flyer-veggies-qr-code%26utm_id=6958af807798408d8dcd31550a1e63f9 -->
         <img src="/assets/images/qr-codes/salon-2026-01-cooking-at-altitude-veggies.png" alt="Get Tickets" class="qr-code">
         <div class="details">
           <div class="date">Thursday, January 15th</div>
