--- a/website/index.html
+++ b/website/index.html
@@ -27,7 +27,7 @@ permalink: /
         </div>
         <div class="hero-actions">
             <a href="https://tedxbreckenridge.ticketsauce.com/e/cooking-at-altitude?utm_source=affiliate&utm_name=tedxbreckenridge.com-homepage-hero&utm_campaign=tedxbreckenridge.com-homepage-hero&utm_id=69588292d2f8406db61a64eb0a1e6277" class="btn btn-primary">Get Tickets</a>
-            <a href="/salon/" class="btn btn-secondary">Learn More</a>
+            <a href="/events/2026-01-15-salon-elevated-cuisine/" class="btn btn-secondary">Learn More</a>
         </div>
     </div>
     <div class="hero-visual">
@@ -59,7 +59,7 @@ permalink: /
             </p>
 
             <div class="btn-group">
-                <a href="#mailing-list" class="btn btn-primary">Join Our Mailing List</a>
+                <a href="/events/2026-10-03-tedxbreckenridge-2026/" class="btn btn-primary">Learn More</a>
                 <a href="https://calendar.google.com/calendar/render?action=TEMPLATE&text=TEDxBreckenridge+2026+Main+Event&dates=20261003T180000/20261003T220000&details=Ideas+worth+spreading+in+the+heart+of+the+Rockies.+Join+us+for+an+evening+of+inspiring+talks+and+meaningful+connections.&location=Riverwalk+Center,+150+W+Adams+Ave,+Breckenridge,+CO+80424&sf=true&output=xml" target="_blank" rel="noopener noreferrer" class="btn btn-secondary">Add to Calendar</a>
             </div>
         </div>
