--- a/website/salon.html
+++ b/website/salon.html
@@ -1,7 +1,7 @@
 ---
 layout: default
 title: TEDxBreckenridge Salon
-description: TEDxBreckenridge Salon events are small, conversational gatherings designed to spark curiosity and build connections. Join us for the next Salon on January 15, 2026 featuring Elevated Cuisine - The Science and Art of Cooking at Altitude.
+description: TEDxBreckenridge Salon events are small, conversational gatherings designed to spark curiosity and build connections. Join us for intimate discussions on fascinating topics throughout the year.
 permalink: /salon/
 redirect_from: /salons/
 ---
@@ -26,41 +26,7 @@ redirect_from: /salons/
     </div>
 </section>
 
-<!-- Upcoming Salon -->
-<section class="section section-full theme-section" id="upcoming-salon">
-    <div class="section-inner">
-        <div class="theme-content theme-content-reverse">
-            <div class="theme-visual">
-                <img src="{{ '/assets/images/heroes/salon-cutting-board.jpg' | relative_url }}" alt="Fresh ingredients on a cutting board prepared for high-altitude cooking demonstration" loading="lazy">
-            </div>
-            <div class="theme-text">
-                <div class="section-header">
-                    <div class="section-eyebrow">Next Event</div>
-                    <h2 class="section-title">Elevated Cuisine:<br>The Science and Art of Cooking at Altitude</h2>
-                </div>
-                <p>Why does water boil at a lower temperature in the mountains? Why do cakes rise too fast—or not at all? And how do professional chefs adapt their techniques when cooking at 9,000 feet?</p>
-                <p>In this TEDxBreckenridge Salon, the culinary team from <a href="https://coloradomtn.edu/" target="_blank" rel="noopener noreferrer">Colorado Mountain College</a> explores how altitude changes the rules of cooking and baking—and what it takes to master flavor, texture, and technique in the High Rockies. Through a short talk, practical insights, and guided discussion, we'll dive into the science behind high-elevation kitchens and the creative adaptations that make great food possible up here.</p>
-                <p>Come ready to think, ask questions, and leave with ideas you'll actually use in your own kitchen.</p>
-                <div class="event-details">
-                    <p><strong>January 15, 2026 • 6:00 PM</strong><br>
-                    EVO3 Workspace<br>
-                    620 E Main St #6, Frisco, CO 80443</p>
-                    <div class="event-details-map">
-                        <iframe src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d3076.7747895686373!2d-106.09786892396915!3d39.57455871140394!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x876a76cd7c2c0f63%3A0x7b7c0a3e3e0e0e0e!2s620%20Main%20St%20%236%2C%20Frisco%2C%20CO%2080443!5e0!3m2!1sen!2sus!4v1234567890123!5m2!1sen!2sus" width="100%" height="300" allowfullscreen="" loading="lazy" referrerpolicy="no-referrer-when-downgrade" title="Map showing EVO3 Workspace location at 620 E Main St #6, Frisco, CO 80443"></iframe>
-                    </div>
-                    <p><strong>Suggested donation:</strong> $10<br>
-                    <em>Ideas should be accessible to everyone. If cost is a barrier, join us anyway — your curiosity matters most.</em></p>
-                </div>
-                <div class="btn-group mt-32">
-                    <a href="https://tedxbreckenridge.ticketsauce.com/e/cooking-at-altitude?utm_source=affiliate&utm_name=tedxbreckenridge.com-salon-hero&utm_campaign=tedxbreckenridge.com-salon-hero&utm_id=695882c410004d1cb39430930a1e60f8" class="btn btn-primary">Get Tickets</a>
-                    <a href="https://calendar.google.com/calendar/render?action=TEMPLATE&text=TEDxBreckenridge+Salon:+Elevated+Cuisine&dates=20260115T180000/20260115T200000&details=Explore+how+altitude+changes+the+rules+of+cooking+and+baking+with+the+culinary+team+from+Colorado+Mountain+College.&location=EVO3+Workspace,+620+E+Main+St+%236,+Frisco,+CO+80443&sf=true&output=xml" target="_blank" rel="noopener noreferrer" class="btn btn-secondary">Add to Calendar</a>
-                </div>
-            </div>
-        </div>
-    </div>
-</section>
-
-<!-- Upcoming Salons Schedule -->
+<!-- Upcoming Salon Events -->
 <section class="section section-full bg-cream">
     <div class="section-inner container-sm">
         <div class="section-header section-header-centered">
@@ -69,43 +35,36 @@ redirect_from: /salons/
         </div>
 
         <div class="grid-gap-24">
-            <!-- Salon 1 -->
-            <div class="card-white">
-                <h3 class="text-red">Elevated Cuisine: The Science and Art of Cooking at Altitude</h3>
-                <p>Explore how altitude changes the rules of cooking and baking with the culinary team from Colorado Mountain College.</p>
-                <p class="text-stone card-meta"><strong>January 15, 2026 • 6:00 PM</strong><br>EVO3 Workspace, Frisco</p>
-                <div class="mt-24">
-                    <a href="https://tedxbreckenridge.ticketsauce.com/e/cooking-at-altitude?utm_source=affiliate&utm_name=tedxbreckenridge.com-salon-schedule&utm_campaign=tedxbreckenridge.com-salon-schedule&utm_id=6958831a55f442e1b25c00300a1e63f9" class="btn btn-primary">Get Tickets</a>
+            {% assign salon_events = site.events | where: "event_type", "salon" | where_exp: "event", "event.date >= site.time" | sort: "date" %}
+
+            {% if salon_events.size > 0 %}
+            {% for event in salon_events %}
+            {% include format-time.html time=event.start_time %}
+            <div class="event-card">
+                <div class="event-card-image">
+                    <img src="{{ event.image | relative_url }}" alt="{{ event.title }}" loading="lazy">
+                </div>
+                <div class="event-card-content">
+                    <h3 class="text-red"><a href="{{ event.url }}">{{ event.title }}</a></h3>
+                    <p>{{ event.description | truncate: 200 }}</p>
+                    <p class="text-stone card-meta">
+                        <strong>{{ event.date | date: '%B %-d, %Y' }}{% if event.start_time %} • {{ formatted_time }}{% endif %}</strong><br>
+                        {{ event.venue_name }}, {{ event.venue_city }}
+                    </p>
+                    <div class="btn-group">
+                        {% if event.ticket_url %}
+                        <a href="{{ event.ticket_url }}" class="btn btn-primary" target="_blank" rel="noopener noreferrer">Get Tickets</a>
+                        {% endif %}
+                        <a href="{{ event.url }}" class="btn btn-secondary">Learn More</a>
+                    </div>
                 </div>
             </div>
-
-            <!-- Salon 2 - March -->
+            {% endfor %}
+            {% else %}
             <div class="card-white">
-                <h3 class="text-charcoal">March Salon</h3>
-                <p>Topic and details to be announced.</p>
-                <p class="text-stone card-meta"><strong>March 2026</strong><br>Date and location TBD</p>
+                <p>No upcoming Salon events at this time. Join our mailing list to be notified when new events are announced.</p>
             </div>
-
-            <!-- Salon 3 - April -->
-            <div class="card-white">
-                <h3 class="text-charcoal">April Salon</h3>
-                <p>Topic and details to be announced.</p>
-                <p class="text-stone card-meta"><strong>April 2026</strong><br>Date and location TBD</p>
-            </div>
-
-            <!-- Salon 4 - June -->
-            <div class="card-white">
-                <h3 class="text-charcoal">June Salon</h3>
-                <p>Topic and details to be announced.</p>
-                <p class="text-stone card-meta"><strong>June 2026</strong><br>Date and location TBD</p>
-            </div>
-
-            <!-- Salon 5 - August -->
-            <div class="card-white">
-                <h3 class="text-charcoal">August Salon</h3>
-                <p>Topic and details to be announced.</p>
-                <p class="text-stone card-meta"><strong>August 2026</strong><br>Date and location TBD</p>
-            </div>
+            {% endif %}
         </div>
 
         <div class="cta-block">
