Fix style inconsistencies.

--- a/website/salon.html
+++ b/website/salon.html
@@ -16,7 +16,7 @@ redirect_from: /salons/
     </div>
 </div>
 
-<section class="section section-full bg-white" style="padding-top: 40px;">
+<section class="section section-full bg-white section-pt-40">
     <div class="section-inner container-sm prose">
         <p class="intro">TEDxBreckenridge Salon events are intimate, conversational gatherings that bring together curious minds to explore fascinating topics. Unlike our main annual event, Salons are smaller by design—creating space for deeper discussion, questions, and genuine connection.</p>
 
