Add redirects to fix Google Search Console issues.

--- a/website/pages/talks.html
+++ b/website/pages/talks.html
@@ -2,6 +2,9 @@
 layout: default
 title: Watch Talks
 permalink: /talks/
+redirect_from:
+  - /watch
+  - /watch/
 description: Watch inspiring TEDx talks from Breckenridge speakers. Explore ideas from past TEDxBreckenridge events including innovation, community, and mountain culture.
 ---
 
