--- a/_print/2026-01-salon-flyer.html
+++ b/_print/2026-01-salon-flyer.html
@@ -1,168 +1,27 @@
 ---
+layout: flyer
 title: "January Salon Flyer - Elevated Cuisine"
 date: 2026-01-01
 description: "8.5x11 print flyer for the January 2026 Salon event"
 format: "8.5 x 11 Flyer"
 ---
-<!DOCTYPE html>
-<html lang="en">
-<head>
-  <meta charset="UTF-8">
-  <title>TEDxBreckenridge Salon - Elevated Cuisine</title>
-  <style>
-    @page {
-      size: 8.5in 11in;
-      margin: 0;
-    }
 
-    * {
-      margin: 0;
-      padding: 0;
-      box-sizing: border-box;
-    }
-
-    html, body {
-      width: 8.5in;
-      height: 11in;
-      font-family: 'Helvetica Neue', Helvetica, Arial, sans-serif;
-      -webkit-print-color-adjust: exact;
-      print-color-adjust: exact;
-    }
-
-    .flyer {
-      position: relative;
-      width: 8.5in;
-      height: 11in;
-      overflow: hidden;
-    }
-
-    .background {
-      position: absolute;
-      top: 0;
-      left: 0;
-      width: 100%;
-      height: 100%;
-      background-image: url('/assets/images/heroes/salon-elevated-cuisine.jpg');
-      background-size: cover;
-      background-position: center;
-    }
-
-    .overlay {
-      position: absolute;
-      top: 0;
-      left: 0;
-      width: 100%;
-      height: 100%;
-      background: linear-gradient(
-        135deg,
-        rgba(0, 0, 0, 0.7) 0%,
-        rgba(0, 0, 0, 0.4) 50%,
-        rgba(0, 0, 0, 0.2) 100%
-      );
-    }
-
-    .content {
-      position: relative;
-      z-index: 1;
-      width: 100%;
-      height: 100%;
-      padding: 0.75in;
-      display: flex;
-      flex-direction: column;
-      justify-content: space-between;
-      color: #fff;
-    }
-
-    .header {
-      display: flex;
-      flex-direction: column;
-      align-items: flex-start;
-    }
-
-    .logo {
-      width: 2.5in;
-      height: auto;
-      margin-bottom: 0.4in;
-    }
-
-    .presents {
-      font-size: 14pt;
-      font-weight: 400;
-      letter-spacing: 0.15em;
-      text-transform: uppercase;
-      color: rgba(255, 255, 255, 0.9);
-      margin-bottom: 0.15in;
-    }
-
-    .title {
-      font-size: 42pt;
-      font-weight: 700;
-      line-height: 1.1;
-      max-width: 5.5in;
-      color: #fff;
-      text-shadow: 0 2px 20px rgba(0, 0, 0, 0.3);
-    }
-
-    .footer {
-      display: flex;
-      flex-direction: column;
-      align-items: flex-start;
-    }
-
-    .details {
-      font-size: 16pt;
-      font-weight: 500;
-      line-height: 1.6;
-      color: #fff;
-      text-shadow: 0 1px 10px rgba(0, 0, 0, 0.5);
-    }
-
-    .details .date {
-      font-weight: 700;
-    }
-
-    .qr-code {
-      width: 1.7in;
-      height: 1.7in;
-      margin-bottom: 0.2in;
-      border: 4px solid #fff;
-      border-radius: 4px;
-    }
-
-    @media print {
-      html, body {
-        width: 8.5in;
-        height: 11in;
-      }
-
-      .flyer {
-        page-break-after: avoid;
-        page-break-inside: avoid;
-      }
-    }
-  </style>
-</head>
-<body>
-  <div class="flyer">
-    <div class="background"></div>
-    <div class="overlay"></div>
-    <div class="content">
-      <div class="header">
-        <img src="/assets/images/logos/tedxbreckenridge-evergreen-logo-white.png" alt="TEDxBreckenridge" class="logo">
-        <div class="presents">Salon presents</div>
-        <h1 class="title">Elevated Cuisine: The Science and Art of Cooking at Altitude</h1>
-      </div>
-      <div class="footer">
-<!-- QR code for: https://tedxbreckenridge.ticketsauce.com/e/cooking-at-altitude?utm_source=affiliate&utm_name=flyer-flour-qr-code&utm_campaign=flyer-flour-qr-code&utm_id=6958af5988644520a77064eb0a1e6277 -->
-        <!-- Generate at: https://api.qrserver.com/v1/create-qr-code/?size=510x510&data=https://tedxbreckenridge.ticketsauce.com/e/cooking-at-altitude?utm_source=affiliate%26utm_name=flyer-flour-qr-code%26utm_campaign=flyer-flour-qr-code%26utm_id=6958af5988644520a77064eb0a1e6277 -->
-        <img src="/assets/images/qr-codes/salon-2026-01-cooking-at-altitude-flour.png" alt="Get Tickets" class="qr-code">
-        <div class="details">
-          <div class="date">Thursday, January 15th</div>
-          <div>EVO3 Workspace, Frisco, CO</div>
-          <div>6:00 - 7:30pm</div>
-        </div>
-      </div>
+<div class="background" style="background-image: url('/assets/images/heroes/salon-elevated-cuisine.jpg');"></div>
+<div class="overlay overlay--dark"></div>
+<div class="content">
+  <div class="header">
+    <img src="/assets/images/logos/tedxbreckenridge-evergreen-logo-white.png" alt="TEDxBreckenridge" class="logo">
+    <div class="presents">Salon presents</div>
+    <h1 class="title">Elevated Cuisine: The Science and Art of Cooking at Altitude</h1>
+  </div>
+  <div class="footer">
+    <!-- QR code for: https://tedxbreckenridge.ticketsauce.com/e/cooking-at-altitude?utm_source=affiliate&utm_name=flyer-flour-qr-code&utm_campaign=flyer-flour-qr-code&utm_id=6958af5988644520a77064eb0a1e6277 -->
+    <!-- Generate at: https://api.qrserver.com/v1/create-qr-code/?size=510x510&data=https://tedxbreckenridge.ticketsauce.com/e/cooking-at-altitude?utm_source=affiliate%26utm_name=flyer-flour-qr-code%26utm_campaign=flyer-flour-qr-code%26utm_id=6958af5988644520a77064eb0a1e6277 -->
+    <img src="/assets/images/qr-codes/salon-2026-01-cooking-at-altitude-flour.png" alt="Get Tickets" class="qr-code">
+    <div class="details">
+      <div class="date">Thursday, January 15th</div>
+      <div>EVO3 Workspace, Frisco, CO</div>
+      <div>6:00 - 7:30pm</div>
     </div>
   </div>
-</body>
-</html>
+</div>
