Update the EVO3 Workspace logo on the Jan Salon slides.

--- a/_print/2026-01-salon-slides.html
+++ b/_print/2026-01-salon-slides.html
@@ -24,7 +24,7 @@ format: "1920x1080 Slides"
     <h2 class="thanks-title">Thank You</h2>
     <div class="thanks-grid">
       <div class="thanks-item">
-        <img src="/assets/images/sponsors/evo3-workspace-logo-dark.png" alt="EVO3 Workspace" class="thanks-item__logo thanks-item__logo--invert">
+        <img src="/assets/images/sponsors/evo3-workspace-logo-white.png" alt="EVO3 Workspace" class="thanks-item__logo">
         <div class="thanks-item__label">Venue host</div>
         <div class="thanks-item__name">EVO3 Workspace</div>
       </div>
