Add more detail to January Salon slides.

--- a/_print/2026-01-salon-slides.html
+++ b/_print/2026-01-salon-slides.html
@@ -14,7 +14,7 @@ format: "1920x1080 Slides"
     <img src="/assets/images/logos/tedxbreckenridge-evergreen-logo-white.png" alt="TEDxBreckenridge" class="logo">
     <div class="presents">Salon presents</div>
     <h1 class="title">Elevated Cuisine: The Science and Art of Cooking at Altitude</h1>
-    <div class="subtitle">Featuring the culinary team from Colorado Mountain College</div>
+    <div class="subtitle">Featuring Chefs Kevin Clarke and Bernhard Schrag<br>from Colorado Mountain College</div>
   </div>
 </div>
 
@@ -30,7 +30,7 @@ format: "1920x1080 Slides"
       </div>
       <div class="thanks-item">
         <img src="/assets/images/sponsors/colorado-mountain-college-logo-yellow-on-blue.png" alt="Colorado Mountain College" class="thanks-item__logo thanks-item__logo--rounded">
-        <div class="thanks-item__label">Speaker</div>
+        <div class="thanks-item__label">Speakers</div>
         <div class="thanks-item__name">Colorado Mountain College</div>
       </div>
     </div>
@@ -121,7 +121,35 @@ format: "1920x1080 Slides"
   </div>
 </div>
 
-<!-- Slide 6: Agenda -->
+<!-- Slide 6: CMC Culinary Classes -->
+<div class="slide slide--dark">
+  <div class="slide__content">
+    <div class="slide__split">
+      <div class="slide__split-content">
+        <div class="section-header">
+          <h2 class="section-header__title">Continue Your Culinary Journey</h2>
+          <p class="section-header__subtitle">Upcoming classes at Colorado Mountain College</p>
+        </div>
+        <ul class="content-list">
+          <li>Biscuits and Scones at High Altitude</li>
+          <li>Knife Skills</li>
+          <li>Artisan Bread & Artisan Pizza</li>
+          <li>Hand Made Pasta & Italian Gnocchi</li>
+          <li>Sushi Adventure</li>
+          <li>Paris Bistro, Provence & Burgundy</li>
+        </ul>
+      </div>
+      <div class="slide__split-image">
+        <img src="/assets/images/sponsors/cmc-culinary-community-education-class.jpg" alt="Colorado Mountain College culinary class">
+      </div>
+    </div>
+  </div>
+  <div class="slide-footer">
+    <img src="/assets/images/logos/tedxbreckenridge-evergreen-logo-white.png" alt="" class="slide-footer__logo">
+  </div>
+</div>
+
+<!-- Slide 7: Agenda -->
 <div class="slide slide--dark">
   <div class="slide__content">
     <div class="slide__split">
@@ -130,9 +158,9 @@ format: "1920x1080 Slides"
           <h2 class="section-header__title">Agenda</h2>
         </div>
         <ul class="agenda-list">
-          <li data-number="1">Bernhard Schrag — Cooking at Altitude</li>
-          <li data-number="2">Q&amp;A with Bernhard Schrag</li>
-          <li data-number="3">Community Discussion (in groups of 3)</li>
+          <li data-number="1">The Science and Art of Cooking at Altitude</li>
+          <li data-number="2">Q&amp;A with Chefs Kevin Clarke &amp; Bernhard Schrag</li>
+          <li data-number="3">Community Discussion</li>
         </ul>
       </div>
       <div class="slide__split-image">
@@ -145,20 +173,17 @@ format: "1920x1080 Slides"
   </div>
 </div>
 
-<!-- Slide 7: Speaker Bio -->
+<!-- Slide 8: Speaker Bio - Bernhard Schrag -->
 <div class="slide slide--dark slide--speaker">
-  <div class="slide__background" style="background-image: url('/assets/images/heroes/salon-cutting-board.jpg');"></div>
+  <div class="slide__background" style="background-image: url('/assets/images/heroes/salon-elevated-cuisine.jpg');"></div>
   <div class="slide__overlay slide__overlay--warm"></div>
   <div class="slide__content">
-    <div class="section-header">
-      <h2 class="section-header__title">Elevated Cuisine: The Science<br>and Art of Cooking at Altitude</h2>
-    </div>
     <div class="speaker-layout">
       <div class="speaker-bio">
         <h3 class="speaker-name">Bernhard Schrag</h3>
-        <div class="speaker-title">Associate Professor of Culinary Arts, Colorado Mountain College</div>
+        <div class="speaker-title">Associate Professor of Culinary Arts<br>Colorado Mountain College</div>
         <p class="speaker-description">
-          Bernhard Schrag teaches culinary arts at CMC's Vail Valley campus in Edwards. With degrees in adult and vocational education from Australia and New Zealand, he brings a global perspective to high-altitude cooking. Beyond the classroom, Bernhard is an avid outdoorsman who enjoys camping with family, foraging for porcini mushrooms, and instructing skiing at Keystone.
+          Chef Schrag teaches culinary arts at CMC's Vail Valley campus in Edwards. With degrees in adult and vocational education from Australia and New Zealand, he brings a global perspective to high-altitude cooking.
         </p>
       </div>
     </div>
@@ -168,7 +193,50 @@ format: "1920x1080 Slides"
   </div>
 </div>
 
-<!-- Slide 8: Community Questions -->
+<!-- Slide 9: Speaker Bio - Kevin Clarke -->
+<div class="slide slide--dark slide--speaker">
+  <div class="slide__background" style="background-image: url('/assets/images/heroes/salon-cutting-board.jpg');"></div>
+  <div class="slide__overlay slide__overlay--warm"></div>
+  <div class="slide__content">
+    <div class="speaker-layout">
+      <div class="speaker-bio">
+        <h3 class="speaker-name">Kevin Clarke</h3>
+        <div class="speaker-title">Director of Culinary Education<br>Colorado Mountain College</div>
+        <p class="speaker-description">
+          Chef Clarke directs CMC's Culinary Education program and has been leading the Keystone campus since 2000. A 1996 graduate of CMC's first Culinary Arts class, he returned to guide the next generation after careers at Ski Tip Lodge and in the rafting industry.
+        </p>
+      </div>
+    </div>
+  </div>
+  <div class="slide-footer">
+    <img src="/assets/images/logos/tedxbreckenridge-evergreen-logo-white.png" alt="" class="slide-footer__logo">
+  </div>
+</div>
+
+<!-- Slide 10: Placeholder for Speaker Content -->
+<div class="slide slide--dark">
+  <div class="slide__content" style="justify-content: center; align-items: center; text-align: center;">
+    <h2 style="font-size: 56px; font-weight: 400; opacity: 0.6;">Placeholder slide(s) for speaker content</h2>
+  </div>
+  <div class="slide-footer">
+    <img src="/assets/images/logos/tedxbreckenridge-evergreen-logo-white.png" alt="" class="slide-footer__logo">
+  </div>
+</div>
+
+<!-- Slide 11: Q&A -->
+<div class="slide slide--dark">
+  <div class="slide__background" style="background-image: url('/assets/images/heroes/cooking-class-discussion.jpg');"></div>
+  <div class="slide__overlay slide__overlay--dark"></div>
+  <div class="slide__content" style="justify-content: center; align-items: center; text-align: center;">
+    <h1 style="font-size: 160px; font-weight: 700; margin-bottom: 40px;">Q&A</h1>
+    <p style="font-size: 48px; font-weight: 400; opacity: 0.8;">Questions for Chefs Kevin Clarke &amp; Bernhard Schrag</p>
+  </div>
+  <div class="slide-footer">
+    <img src="/assets/images/logos/tedxbreckenridge-evergreen-logo-white.png" alt="" class="slide-footer__logo">
+  </div>
+</div>
+
+<!-- Slide 12: Community Questions -->
 <div class="slide slide--dark">
   <div class="slide__content">
     <div class="section-header">
@@ -207,7 +275,7 @@ format: "1920x1080 Slides"
   </div>
 </div>
 
-<!-- Slide 9: Call to Action -->
+<!-- Slide 13: Call to Action -->
 <div class="slide slide--dark slide--cta">
   <div class="slide__content">
     <p class="cta-message">Together, let's build a community where ideas inspire action.</p>
