Update January Salon references with more details.

--- a/_emails/2026-01-salon-elevated-cuisine-reminder.html
+++ b/_emails/2026-01-salon-elevated-cuisine-reminder.html
@@ -108,11 +108,11 @@ description: "Pre-event reminder email for Elevated Cuisine Salon attendees"
                                         </p>
 
                                         <p style="margin: 0 0 16px 0; font-family: Helvetica, Arial, sans-serif; font-size: 18px; font-weight: bold; line-height: 1.4; color: #2A2A2A;">
-                                            🎤 Speaker
+                                            🎤 Speakers
                                         </p>
                                         <p style="margin: 0; font-family: Helvetica, Arial, sans-serif; font-size: 15px; line-height: 1.6; color: #2A2A2A;">
-                                            <strong>Bernhard Schrag</strong><br>
-                                            Culinary Team, Colorado Mountain College
+                                            <strong>Chefs Kevin Clarke &amp; Bernhard Schrag</strong><br>
+                                            Colorado Mountain College
                                         </p>
                                     </td>
                                 </tr>
@@ -154,14 +154,14 @@ description: "Pre-event reminder email for Elevated Cuisine Salon attendees"
                                 <tr>
                                     <td style="padding: 8px 0;">
                                         <p style="margin: 0; font-family: Helvetica, Arial, sans-serif; font-size: 15px; line-height: 1.6; color: #2A2A2A;">
-                                            <strong>2.</strong> Cooking at Altitude — Bernhard Schrag
+                                            <strong>2.</strong> The Science and Art of Cooking at Altitude
                                         </p>
                                     </td>
                                 </tr>
                                 <tr>
                                     <td style="padding: 8px 0;">
                                         <p style="margin: 0; font-family: Helvetica, Arial, sans-serif; font-size: 15px; line-height: 1.6; color: #2A2A2A;">
-                                            <strong>3.</strong> Q&amp;A with Bernhard
+                                            <strong>3.</strong> Q&amp;A with Chefs Kevin Clarke &amp; Bernhard Schrag
                                         </p>
                                     </td>
                                 </tr>
@@ -200,7 +200,7 @@ description: "Pre-event reminder email for Elevated Cuisine Salon attendees"
                                             <a href="https://www.tedxbreckenridge.com/events/2026-01-15-salon-elevated-cuisine/" target="_blank" style="font-family: Helvetica, Arial, sans-serif; font-size: 14px; color: #4A7470; text-decoration: underline;">Event Details</a>
                                         </p>
                                         <p style="margin: 0;">
-                                            <a href="https://calendar.google.com/calendar/render?action=TEMPLATE&text=TEDxBreckenridge+Salon%3A+Elevated+Cuisine&dates=20260115T174500/20260115T193000&details=Join+the+culinary+team+from+Colorado+Mountain+College+as+they+explore+how+altitude+changes+the+rules+of+cooking+and+baking.%0A%0ALocation%3A+EVO3+Workspace%2C+620+E+Main+St+%236%2C+Frisco%2C+CO&location=EVO3+Workspace%2C+620+E+Main+St+%236%2C+Frisco%2C+CO+80443&ctz=America/Denver" target="_blank" style="font-family: Helvetica, Arial, sans-serif; font-size: 14px; color: #4A7470; text-decoration: underline;">
+                                            <a href="https://calendar.google.com/calendar/render?action=TEMPLATE&text=TEDxBreckenridge+Salon%3A+Elevated+Cuisine&dates=20260115T174500/20260115T193000&details=Join+Chefs+Kevin+Clarke+and+Bernhard+Schrag+from+Colorado+Mountain+College+as+they+explore+how+altitude+changes+the+rules+of+cooking+and+baking.%0A%0ALocation%3A+EVO3+Workspace%2C+620+E+Main+St+%236%2C+Frisco%2C+CO&location=EVO3+Workspace%2C+620+E+Main+St+%236%2C+Frisco%2C+CO+80443&ctz=America/Denver" target="_blank" style="font-family: Helvetica, Arial, sans-serif; font-size: 14px; color: #4A7470; text-decoration: underline;">
                                                 📅 Add to Calendar
                                             </a>
                                         </p>
