--- a/website/index.html
+++ b/website/index.html
@@ -13,7 +13,7 @@ redirect_from:
     <div class="hero-content">
         <div class="hero-eyebrow">TEDxBreckenridge Salon • January 15, 2026</div>
         <h1 class="hero-title hero-title-lg">Elevated Cuisine: The Science and Art of Cooking at Altitude</h1>
-        <p class="hero-description">Join the culinary team from <a href="https://coloradomtn.edu/campuses/breckenridge-dillon/">Colorado Mountain College</a> as they explore how altitude changes the rules of cooking and baking—and what it takes to master flavor, texture, and technique in the High Rockies.</p>
+        <p class="hero-description">Join Chefs <a href="https://coloradomtn.edu/faculty/clarke-kevin/">Kevin Clarke</a> and <a href="https://coloradomtn.edu/faculty/schrag-bernhard/">Bernhard Schrag</a> from <a href="https://coloradomtn.edu/campuses/breckenridge-dillon/">Colorado Mountain College</a> as they explore how altitude changes the rules of cooking and baking—and what it takes to master flavor, texture, and technique in the High Rockies.</p>
         <div class="hero-meta">
             <div class="hero-meta-item">
                 <span class="hero-meta-label">Location</span>
