--- a/_print/2026-01-salon-slides.html
+++ b/_print/2026-01-salon-slides.html
@@ -181,7 +181,7 @@ format: "1920x1080 Slides"
     <div class="speaker-layout">
       <div class="speaker-bio">
         <h3 class="speaker-name">Bernhard Schrag</h3>
-        <div class="speaker-title">Associate Professor of Culinary Arts<br>Colorado Mountain College</div>
+        <div class="speaker-title">Executive Chef<br>Recreational Culinary Institute<br>Colorado Mountain College, Summit Campus</div>
         <p class="speaker-description">
           Chef Schrag teaches culinary arts at CMC's Vail Valley campus in Edwards. With degrees in adult and vocational education from Australia and New Zealand, he brings a global perspective to high-altitude cooking.
         </p>
@@ -200,10 +200,10 @@ format: "1920x1080 Slides"
   <div class="slide__content">
     <div class="speaker-layout">
       <div class="speaker-bio">
-        <h3 class="speaker-name">Kevin Clarke</h3>
+        <h3 class="speaker-name">Kevin Clarke, CCE, JD</h3>
         <div class="speaker-title">Director of Culinary Education<br>Colorado Mountain College</div>
         <p class="speaker-description">
-          Chef Clarke directs CMC's Culinary Education program and has been leading the Keystone campus since 2000. A 1996 graduate of CMC's first Culinary Arts class, he returned to guide the next generation after careers at Ski Tip Lodge and in the rafting industry.
+          Chef Clarke directs CMC's Culinary Education program and has been leading the Summit Campus since 2000. A 1996 graduate of CMC's first Culinary Arts class, he returned to guide the next generation after careers at Ski Tip Lodge and in the rafting industry.
         </p>
       </div>
     </div>
