Tweak the January salon email.

--- a/_emails/2026-01-salon-elevated-cuisine-reminder.html
+++ b/_emails/2026-01-salon-elevated-cuisine-reminder.html
@@ -50,14 +50,6 @@ description: "Pre-event reminder email for Elevated Cuisine Salon attendees"
 
     <!-- Email wrapper -->
     <table role="presentation" cellspacing="0" cellpadding="0" border="0" width="100%" style="background-color: #F5F3F0;">
-        <!-- View in browser -->
-        <tr>
-            <td align="center" style="padding: 16px 20px 0 20px;">
-                <p style="margin: 0; font-family: Helvetica, Arial, sans-serif; font-size: 12px; color: #6B6B6B;">
-                    <a href="*|ARCHIVE|*" target="_blank" style="color: #5B8E8E; text-decoration: underline;">View this email in your browser</a>
-                </p>
-            </td>
-        </tr>
         <tr>
             <td align="center" style="padding: 24px 20px 40px 20px;">
 
@@ -77,12 +69,12 @@ description: "Pre-event reminder email for Elevated Cuisine Salon attendees"
 
                             <!-- Greeting -->
                             <p style="margin: 0 0 24px 0; font-family: Helvetica, Arial, sans-serif; font-size: 16px; line-height: 1.6; color: #2A2A2A;">
-                                *|IF:FNAME|*Hi *|FNAME|*,*|ELSE:|*Hi there,*|END:IF|*
+                                Hi there,
                             </p>
 
                             <!-- Intro -->
                             <p style="margin: 0 0 24px 0; font-family: Helvetica, Arial, sans-serif; font-size: 16px; line-height: 1.6; color: #2A2A2A;">
-                                We're excited to see you at our <strong>Elevated Cuisine Salon on Thursday!</strong> Here's everything you need to know:
+                                We're excited to see you at our <strong>Elevated Cuisine Salon tomorrow (Thursday)!</strong> Here's everything you need to know:
                             </p>
 
                             <!-- Event details box -->
@@ -90,7 +82,7 @@ description: "Pre-event reminder email for Elevated Cuisine Salon attendees"
                                 <tr>
                                     <td style="padding: 24px;">
                                         <p style="margin: 0 0 16px 0; font-family: Helvetica, Arial, sans-serif; font-size: 18px; font-weight: bold; line-height: 1.4; color: #2A2A2A;">
-                                            📍 Location
+                                            Location
                                         </p>
                                         <p style="margin: 0 0 20px 0; font-family: Helvetica, Arial, sans-serif; font-size: 15px; line-height: 1.6; color: #2A2A2A;">
                                             <a href="https://www.google.com/maps/search/?api=1&query=620+E+Main+St+%236+Frisco+CO+80443" target="_blank" style="color: #4A7470; text-decoration: underline; font-weight: bold;">EVO3 Workspace</a><br>
@@ -99,7 +91,7 @@ description: "Pre-event reminder email for Elevated Cuisine Salon attendees"
                                         </p>
 
                                         <p style="margin: 0 0 16px 0; font-family: Helvetica, Arial, sans-serif; font-size: 18px; font-weight: bold; line-height: 1.4; color: #2A2A2A;">
-                                            🕐 Timing
+                                            Timing
                                         </p>
                                         <p style="margin: 0 0 20px 0; font-family: Helvetica, Arial, sans-serif; font-size: 15px; line-height: 1.6; color: #2A2A2A;">
                                             <strong>Thursday, January 15, 2026</strong><br>
@@ -108,7 +100,7 @@ description: "Pre-event reminder email for Elevated Cuisine Salon attendees"
                                         </p>
 
                                         <p style="margin: 0 0 16px 0; font-family: Helvetica, Arial, sans-serif; font-size: 18px; font-weight: bold; line-height: 1.4; color: #2A2A2A;">
-                                            🎤 Speakers
+                                            Speakers
                                         </p>
                                         <p style="margin: 0; font-family: Helvetica, Arial, sans-serif; font-size: 15px; line-height: 1.6; color: #2A2A2A;">
                                             <strong>Chefs Kevin Clarke &amp; Bernhard Schrag</strong><br>
@@ -123,24 +115,15 @@ description: "Pre-event reminder email for Elevated Cuisine Salon attendees"
                                 <tr>
                                     <td style="padding: 20px 24px;">
                                         <p style="margin: 0; font-family: Helvetica, Arial, sans-serif; font-size: 15px; line-height: 1.6; color: #2A2A2A;">
-                                            <strong>This event is sold out!</strong> We're looking forward to an intimate, engaging evening together.
+                                            <strong>This event is sold out!</strong> We're looking forward to an intimate, engaging evening together. If you're no longer able to attend, please reply to this email so we can release your ticket to someone on the waitlist.
                                         </p>
                                     </td>
                                 </tr>
                             </table>
 
-                            <!-- Pre-event gathering -->
-                            <p style="margin: 0 0 12px 0; font-family: Helvetica, Arial, sans-serif; font-size: 18px; font-weight: bold; line-height: 1.4; color: #2A2A2A;">
-                                🍻 Join us beforehand at Highside Brewing
-                            </p>
-
-                            <p style="margin: 0 0 24px 0; font-family: Helvetica, Arial, sans-serif; font-size: 16px; line-height: 1.6; color: #2A2A2A;">
-                                Want to meet other curious minds before the Salon? Join us for a drink at <strong>Highside Brewing at 5:00 PM</strong> — it's right next door to EVO3. Look for TEDx table tents and come say hi!
-                            </p>
-
                             <!-- Agenda -->
                             <p style="margin: 0 0 12px 0; font-family: Helvetica, Arial, sans-serif; font-size: 18px; font-weight: bold; line-height: 1.4; color: #2A2A2A;">
-                                📋 What to Expect
+                                What to Expect
                             </p>
 
                             <table role="presentation" cellspacing="0" cellpadding="0" border="0" width="100%" style="margin-bottom: 32px;">
@@ -174,6 +157,11 @@ description: "Pre-event reminder email for Elevated Cuisine Salon attendees"
                                 </tr>
                             </table>
 
+                            <!-- Community note -->
+                            <p style="margin: 0 0 32px 0; font-family: Helvetica, Arial, sans-serif; font-size: 14px; line-height: 1.6; color: #6B6B6B;">
+                                As always, we invite you to join us in a spirit of curiosity and kindness — respecting others' boundaries and making space for different perspectives. If you have any concerns during the event, please let an organizer know.
+                            </p>
+
                             <!-- Donation box -->
                             <table role="presentation" cellspacing="0" cellpadding="0" border="0" width="100%" style="background-color: #F5F3F0; margin-bottom: 32px;">
                                 <tr>
@@ -201,7 +189,7 @@ description: "Pre-event reminder email for Elevated Cuisine Salon attendees"
                                         </p>
                                         <p style="margin: 0;">
                                             <a href="https://calendar.google.com/calendar/render?action=TEMPLATE&text=TEDxBreckenridge+Salon%3A+Elevated+Cuisine&dates=20260115T174500/20260115T193000&details=Join+Chefs+Kevin+Clarke+and+Bernhard+Schrag+from+Colorado+Mountain+College+as+they+explore+how+altitude+changes+the+rules+of+cooking+and+baking.%0A%0ALocation%3A+EVO3+Workspace%2C+620+E+Main+St+%236%2C+Frisco%2C+CO&location=EVO3+Workspace%2C+620+E+Main+St+%236%2C+Frisco%2C+CO+80443&ctz=America/Denver" target="_blank" style="font-family: Helvetica, Arial, sans-serif; font-size: 14px; color: #4A7470; text-decoration: underline;">
-                                                📅 Add to Calendar
+                                                    Add to Calendar
                                             </a>
                                         </p>
                                     </td>
@@ -224,17 +212,12 @@ description: "Pre-event reminder email for Elevated Cuisine Salon attendees"
 
                             <!-- Sign off -->
                             <p style="margin: 0 0 24px 0; font-family: Helvetica, Arial, sans-serif; font-size: 16px; line-height: 1.6; color: #2A2A2A;">
-                                We can't wait to explore the science and art of high-altitude cooking with you. See you Thursday!
+                                We can't wait to explore the science and art of high-altitude cooking with you. See you tomorrow!
                             </p>
 
                             <p style="margin: 0 0 24px 0; font-family: Helvetica, Arial, sans-serif; font-size: 16px; line-height: 1.6; color: #2A2A2A;">
                                 Warmly,<br>
                                 The TEDxBreckenridge Team
-                            </p>
-
-                            <!-- Forward -->
-                            <p style="margin: 0; font-family: Helvetica, Arial, sans-serif; font-size: 14px; line-height: 1.6; color: #6B6B6B;">
-                                Know someone who'd enjoy this? <a href="*|FORWARD|*" target="_blank" style="color: #4A7470; text-decoration: underline;">Forward this email</a>
                             </p>
 
                         </td>
@@ -269,17 +252,6 @@ description: "Pre-event reminder email for Elevated Cuisine Salon attendees"
                                     </td>
                                 </tr>
                             </table>
-                        </td>
-                    </tr>
-
-                    <!-- Unsubscribe (Mailchimp merge tag) -->
-                    <tr>
-                        <td align="center" style="padding: 24px 40px; background-color: #F5F3F0;">
-                            <p style="margin: 0; font-family: Helvetica, Arial, sans-serif; font-size: 12px; line-height: 1.5; color: #6B6B6B;">
-                                *|IF:LIST|*You're receiving this email because you signed up for updates from TEDxBreckenridge.*|END:IF|*<br>
-                                <a href="*|UPDATE_PROFILE|*" target="_blank" style="color: #5B8E8E; text-decoration: underline;">Update your preferences</a> or <a href="*|UNSUB|*" target="_blank" style="color: #5B8E8E; text-decoration: underline;">unsubscribe</a>
-                            </p>
-                            <p style="margin: 16px 0 0 0; font-family: Helvetica, Arial, sans-serif; font-size: 12px; line-height: 1.5; color: #6B6B6B; white-space: pre-line;">*|LIST:ADDRESS|*</p>
                         </td>
                     </tr>
 
